- cli/cmdutil.c: Fix bug: SHOW displayed blank line for zero value. (RFB)
- cli/cmdint.c: Allow user to interrupt EmuCON cp/mv. (RFB)
- bdos/fsdrive.c: Return EDRIVE from ckdrv() for invalid drive. (RFB)
- cli/cmdint.c: Fix is_valid_drive() for drives > 'P'. (RFB)
- cli/cmdint.c: Improve EmuCON cp/mv error msgs for invalid drive. (RFB)
- cli/cmdint.c: Fix copyright date. (RFB)
- bdos/fsdir.c: Remove some useless #ifdefs. (RFB)
- cli/cmdedit.c: Fix bug: command prompt was overwritten if line was
  recalled after editing with left arrow key. (RFB)
- bdos/fs.h bdos/fsdir.c: Code cleanup: remove code permanently excluded
  by #defines. (RFB)
- aes/struct.h: Code cleanup: use #define value instead of magic number. (RFB)

2014-03-19
- bdos/bdosmain.c bdos/fs.h bdos/fsdir.c bdios/fsmain.c: Eliminate
  uc(), replaced by toupper(). (RFB)

2014-03-20
- bdos/bdosmain.c: Make test for special names for Fopen(), Fcreate()
  the same as Atari TOS. (RFB)
- bdos/fsdir.c: Eliminate xcmps(), replaced by strncasecmp(). (RFB)
- desk/deskfpd.c util/string.c: Slight improvement to strcmp(). (RFB)

2014-03-21
- util/string.c: Make strcmp() use unsigned chars in comparison
  (standard-C compliant). (RFB)
- util/string.c: Make memcmp()/strncmp()/strncasecmp() use unsigned
  chars in comparison (standard-C compliant). (RFB)
- aes/gemaplib.c aes/geminit.c aes/geminit.h aes/gemobed.c: Eliminate
  unnecessary global variable ad_valstr. (RFB)

2014-03-23
- aes/gemctrl.c aes/gemgsxif.c aes/gemgsxif.h aes/geminit.c
  aes/geminit.h aes/gemsuper.c: Code cleanup: arg to gsx_mfset() is
  now MFORM *. (RFB)
- aes/geminit.c aes/geminit.h aes/gemshlib.c aes/gemwmlib.c: Eliminate
  unnecessary global variable ad_stdesk. (RFB)
- aes/geminit.c aes/geminit.h aes/gemlib.h: Eliminate unused variables
  ad_sysglo and D.g_sysglo. (RFB)
- aes/geminit.c aes/gemobed.c aes/gemoblib.c aes/gemoblib.h: Eliminate
  unnecessary global variables ad_fmtstr, ad_rawstr, ad_tmpstr. (RFB)