@@ -13,7 +13,6 @@
 extern SHELL    sh[];
 
 extern BYTE     *ad_stail;
-extern LONG     ad_ssave;
 
 extern LONG     ad_pfile;
 
